--- a/AndroidAllTest/res/values/styles.xml
+++ b/AndroidAllTest/res/values/styles.xml
@@ -14,7 +14,21 @@
      limitations under the License.
 -->
 
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+    <style name="style_my_textview_field">
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:textSize">@dimen/my_textsize</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    
+    <style name="style_my_edittext_field">
+        <item name="android:textColor">#0F0F0F</item>
+        <item name="android:background">@color/app_blue</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">italic</item>
+    </style>
+    
+    
     <style name="StyledIndicators" parent="@android:style/Theme.Light">
         <item name="vpiCirclePageIndicatorStyle">@style/CustomCirclePageIndicator</item>
         <item name="vpiLinePageIndicatorStyle">@style/CustomLinePageIndicator</item>
