--- a/AndroidAllTest/res/layout/forui_layout.xml
+++ b/AndroidAllTest/res/layout/forui_layout.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="25sp"
+        android:format="Longpress me , I have contextMenu : %s"
         />
 
     <Button
